--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
     "react": "https://esm.sh/react@^19.2.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.1/",
     "lucide-react": "https://esm.sh/lucide-react@^0.560.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@tarojs/components": "https://esm.sh/@tarojs/components@^4.1.9",
+    "@tarojs/taro": "https://esm.sh/@tarojs/taro@^4.1.9"
   }
 }
 </script>
 </head>
   <body class="bg-slate-950 text-white antialiased">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
